<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compute_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.main.compute.ComputeFragment">

    <TextView
        android:id="@+id/com_first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:ems="5"
        android:text="@string/first_name_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/com_first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/com_first_name_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name_example"
        android:inputType="textPersonName"
        android:paddingBottom="6dp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/com_last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_first_name_input"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:text="@string/last_name_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/com_last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_first_name_input"
        android:layout_toEndOf="@id/com_last_name_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name_example"
        android:inputType="textPersonName"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/com_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_last_name_input"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:ems="5"
        android:text="@string/gender_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/com_radioGroup"
        android:layout_width="227dp"
        android:layout_height="34dp"
        android:layout_below="@id/com_last_name_input"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/com_gender_label"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/com_maleRadioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/com_femaleRadioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/com_dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_gender_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:ems="7"
        android:text="@string/dob_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/com_dob_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_gender_label"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@id/com_dob_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dateOfBirth_hint"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/com_pob_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_dob_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/pob_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/com_pob_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_dob_input"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/com_pob_label_text"
        android:contentDescription="@string/place_of_birth_info"
        android:src="@drawable/ic_info_24px_color" />

    <AutoCompleteTextView
        android:id="@+id/com_pob_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_pob_label_text"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/placeOfBirth_hint"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageButton
        android:id="@+id/compute_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_pob_input"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/compute_button"
        android:contentDescription="@string/reset_button"
        android:elevation="4dp"
        android:src="@drawable/ic_replay_24px" />

    <Button
        android:id="@+id/compute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_pob_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/button"
        android:text="@string/computeBtn_it"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/com_fiscalCodeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compute_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/textBackground"
        android:elevation="4dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/com_show_barcode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/com_fiscalCodeOutput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/button_grey"
        android:minHeight="0dp"
        android:padding="7dp"
        android:text="@string/show_barcode"
        android:textColor="@color/white"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speedDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:sdMainFabClosedBackgroundColor="@color/colorAccent"
        app:sdMainFabClosedSrc="@drawable/ic_add_24px" />

</RelativeLayout>