<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/extract_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.main.extract.ExtractFragment">

    <TextView
        android:id="@+id/ext_fiscalCodeInput_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/extract_prompt"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ext_fiscalCodeInput_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext_fiscalCodeInput_label"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:hint="@string/sample_fiscal_code"
        android:inputType="text"
        android:textAlignment="center"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/extract_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext_fiscalCodeInput_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/button"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/extract_data_button"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/extract_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext_fiscalCodeInput_input"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/extract_data_button"
        android:contentDescription="@string/reset_button"
        android:src="@drawable/ic_replay_24px" />

    <TextView
        android:id="@+id/ext_first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/extract_data_button"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:ems="7"
        android:text="@string/first_name_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ext_first_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/extract_data_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/ext_first_name_label"
        android:hint="@string/name_code_hint" />

    <TextView
        android:id="@+id/ext_last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext_first_name_label"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="7"
        android:text="@string/last_name_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ext_last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ext_first_name_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/ext_last_name_label"
        android:hint="@string/last_name_code_example" />

    <TextView
        android:id="@+id/ext_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext_last_name_label"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="7"
        android:text="@string/gender_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ext_gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ext_last_name_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/ext_gender_label"
        android:hint="@string/gender_example" />

    <TextView
        android:id="@+id/ext_dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext_gender_label"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="7"
        android:text="@string/dob_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ext_dob_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ext_gender_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/ext_dob_label"
        android:hint="@string/dob_example" />

    <TextView
        android:id="@+id/ext_pob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ext_dob_label"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="7"
        android:text="@string/pob_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ext_pob_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ext_dob_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/ext_pob_label"
        android:hint="@string/placeOfBirth_hint_2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ext_fab_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ext_fab_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/ext_speedDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:sdMainFabClosedBackgroundColor="@color/colorAccent"
        app:sdMainFabClosedSrc="@drawable/ic_add_24px" />

</RelativeLayout>